--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: GaoFeiFei的博客 | GaoFeiFei Blog
 header-img: img/post-bg-desk.jpg
 email: 764810049@qq.com
 description: "Every failure is leading towards success."
-keyword: "GFF, GFF Blog, 熊同学的博客 , 算法, golang, 数据库"
+keyword: "GFF, GFF Blog, 熊同学的博客, 算法, golang, 数据库"
 url: "http://athenabear.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/athenabear/athenabear.github.io.git" # you code repository
@@ -19,10 +19,10 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+#zhihu_username:     熊同学雅典娜_6b66
+github_username:    Athenabear
+#facebook_username:  baiying.qiu.7
+jianshu_username:   熊同学雅典娜_6b66
 #twitter_username:   qiubaiying
 
 
