--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 #zhihu_username:     熊同学雅典娜_6b66
 github_username:    Athenabear
 #facebook_username:  baiying.qiu.7
-jianshu_username:   熊同学雅典娜_6b66
+jianshu_username:   1c857be09045
 #twitter_username:   qiubaiying
 
 
